--- a/src/index.html
+++ b/src/index.html
@@ -13,31 +13,31 @@
 
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
-
-  <!-- un-comment this code to enable service worker
-  <script>
+  
+  <!-- un-comment this code to enable service worker -->
+  <!--   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js')
-        .then(() => console.log('service worker installed'))
-        .catch(err => console.log('Error', err));
+      .then(() => console.log('service worker installed'))
+      .catch(err => console.log('Error', err));
     }
-  </script>-->
+  </script>
+-->
+<link href="build/main.css" rel="stylesheet">
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByzJJR3V3SdBKsp29xq6QKHWvWKHUh6gk&v=3.exp&libraries=places"></script>
+</head> 
 
-  <link href="build/main.css" rel="stylesheet">
-
-  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=places"></script>
-  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE&v=3.exp&libraries=places"></script> -->
-</head>
 <body>
-
+  
   <!-- Ionic's root component and where the app will load -->
   <ion-app></ion-app>
-
+  
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
-
+  <script src="build/vendor.js"></script>
   <!-- The bundle js is generated during the build process -->
   <script src="build/main.js"></script>
-
+  <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByzJJR3V3SdBKsp29xq6QKHWvWKHUh6gk&v=3.exp&libraries=places"></script> -->
+  
 </body>
 </html>
